--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bass_fishing",
   "version": "1.0.0",
   "description": "All things bass fishing.",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,9 @@
   "author": "Jason Heyer",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "repository": {
     "type": "git",
