--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "All things bass fishing.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "Jason Heyer",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.22.0",
+    "apollo-server": "^2.24.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "express-validator": "^6.10.1",
+    "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7"
   },
   "repository": {
     "type": "git",
@@ -21,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/jtheyer/Bass/issues"
   },
-  "homepage": "https://github.com/jtheyer/Bass#readme"
+  "homepage": "https://github.com/jtheyer/Bass#readme",
+  "devDependencies": {
+    "prisma": "^2.22.0"
+  }
 }
